--- a/index.html
+++ b/index.html
@@ -1,50 +1,107 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>The Terminal - Your Source for Fact-Based News</title>
+  <meta charset="UTF-8">
+  <title>Show Name Fan Site - Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway:100,200,600,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <nav class="navigation">
-    <ul>
-      <li>LOCAL</li>
-      <li>NATIONAL</li>
-      <li class="logo">THE TERMINAL</li>
-      <li>GLOBAL</li>
-      <li>OPED</li>
-      <li class="donate">DONATE</li>
-    </ul>
-  </nav>
+  <header class="site-header">
+    <h1 class="site-title">SHOW NAME FAN HUB</h1>
+    <nav class="site-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="episodes.html">Episodes</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <div id="banner">
-    <div class="content">
-      <h1>Conservation Efforts at Lake Tahoe Being Praised by Nation's Leaders</h1>
-    </div>
-  </div>
+  <main class="content home-grid">
+    <section class="hero">
+      <img src="https://via.placeholder.com/900x400" alt="Hero banner image for SHOW NAME">
+      <div class="hero-text">
+        <h2>Welcome to the World of SHOW NAME</h2>
+        <p>
+          This site is a fan-made hub for <strong>SHOW NAME</strong>,
+          collecting summaries, favorite episodes, character highlights, and more.
+          Replace this text later with details about your chosen TV show, movie, book, or game.
+        </p>
+      </div>
+    </section>
 
-  <div id="main" class="content">
-    <h3>THE STATE'S LATEST CONSERVATION EFFORTS ARE BEING HERALDED BY NATION'S TOP LEADERS AS GROUNDBREAKING AND FORWARD THINKING.</h3>
-    <span class="byline">WRITTEN BY: JAMES JAYCE</span>
-    <p>Until recently, construction on the banks of the Lake had been largely under the control of real estate developers. Construction activities have resulted in a clouding of the lake's blue waters. Currently, the Tahoe Regional Planning Agency is regulating construction along the shoreline and has won two Federal Supreme Court battles over recent decisions. These regulations are unpopular with many residents, especially those in the Tahoe Lakefront Homeowners Association.</p>
+    <section class="home-intro">
+      <h3>What Is SHOW NAME About?</h3>
+      <p>
+        SHOW NAME follows a group of characters as they deal with impossible choices,
+        unexpected twists, and very dramatic lighting. Use this block to give a short
+        overview of the story, tone, and main themes.
+      </p>
+      <p>
+        You can describe the setting, the main conflict, and why the story matters.
+        Keep things spoiler-light here and save deeper analysis for the other pages.
+      </p>
 
-    <p>The League to Save Lake Tahoe (Keep Tahoe Blue) has been an environmental watchdog in the Lake Tahoe Basin for 50 years. Founded when a proposal to build a four-lane highway around the lake (with a bridge over the entrance to Emerald Bay) was proposed in 1957, the League has thwarted poorly designed development projects and environmentally unsound planning. The League embraces responsible and diversified use of the Lake's resources while protecting and restoring its natural attributes.</p>
+      <ul class="tag-list">
+        <li>Genre: <span>Action / Drama</span></li>
+        <li>Target Audience: <span>Teens &amp; Adults</span></li>
+        <li>Vibes: <span>Mystery, Found Family, Plot Twists</span></li>
+      </ul>
+    </section>
 
-    <div class="pull-quote">
-      <h2>"THE LEAGUE EMBRACES RESPONSIBLE AND DIVERSIFIED USE OF THE LAKE'S RESOURCES WHILE PROTECTING AND RESTORING ITS NATURAL ATTRIBUTES"</h2>
-    </div>
+    <aside class="home-sidebar">
+      <h3>Quick Facts</h3>
+      <table class="info-table">
+        <tr>
+          <th>Seasons</th>
+          <td>3</td>
+        </tr>
+        <tr>
+          <th>Episodes</th>
+          <td>36</td>
+        </tr>
+        <tr>
+          <th>Episode Length</th>
+          <td>24–45 minutes</td>
+        </tr>
+        <tr>
+          <th>Original Release</th>
+          <td>Year XXXX</td>
+        </tr>
+      </table>
 
-    <p>Since 1980, the Lake Tahoe Interagency Monitoring Program (LTIMP) has been measuring stream discharge and concentrations of nutrients and sediment in up to 10 tributary streams in the Lake Tahoe Basin, California-Nevada. The objectives of the LTIMP are to acquire and disseminate the water quality information necessary to support science-based environmental planning and decision making in the basin. The LTIMP is a cooperative program with support from 12 federal and state agencies with interests in the Tahoe Basin. This data set, together with more recently acquired data on urban runoff water quality, is being used by the Lahontan Regional Water Quality Control Board to develop a program (mandated by the Clean Water Act) to limit the flux of nutrients and fine sediment to the Lake.</p>
+      <img src="https://via.placeholder.com/300x200" alt="Promotional style image for SHOW NAME" class="sidebar-image">
 
-    <p>UC Davis remains a primary steward of the lake. The UC Davis Tahoe Environmental Research Center is dedicated to research, education and public outreach, and to providing objective scientific information for restoration and sustainable use of the Lake Tahoe Basin. Each year, it produces a well-publicized "State of the Lake" assessment report.</p>
-  </div>
+      <p class="highlight-box">
+        Fans love SHOW NAME for its character development, memorable dialogue,
+        and the way it balances humor with serious moments.
+      </p>
+    </aside>
 
-  <div class="share">
-    <a href="#">SHARE</a>
-    <a href="#">FAVORITE</a>
-    <a href="#">READ</a>
-  </div>
+    <section class="home-extra">
+      <h3>Join the Fandom</h3>
+      <p>
+        Use this section to describe how fans usually engage with SHOW NAME:
+        online communities, fan art, streaming marathons, or conventions.
+      </p>
+
+      <img src="https://via.placeholder.com/400x250" alt="Fan art style placeholder for SHOW NAME">
+
+      <form class="newsletter-form">
+        <h4>Sign Up for Updates</h4>
+        <label for="email">Email address:</label>
+        <input id="email" type="email" name="email" placeholder="you@example.com">
+        <button type="submit">Join List</button>
+      </form>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <p>&copy; 2025 SHOW NAME Fan Hub. This is a student project site.</p>
+  </footer>
 
 </body>
 </html>
