--- a/episodes.html
+++ b/episodes.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Show Name Fan Site - Episodes</title>
+  <title>Yu-Gi-Oh! ARC-V Fan Site - Episodes</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway:100,200,600,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="episodes-page">
 
   <header class="site-header">
-    <h1 class="site-title">SHOW NAME FAN HUB</h1>
+    <h1 class="site-title">ARC-V EPISODE GUIDE</h1>
     <nav class="site-nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="episodes.html">Episodes</a></li>
+        <li><a href="index.html">Overview</a></li>
+        <li><a href="episodes.html">Episode Guide</a></li>
         <li><a href="gallery.html">Gallery</a></li>
       </ul>
     </nav>
@@ -22,108 +22,124 @@
 
   <main class="content episodes-layout">
     <section class="episodes-intro">
-      <h2>Episode Guide</h2>
+      <h2>Major Arcs in Yu-Gi-Oh! ARC-V</h2>
       <p>
-        Here you can create a simple guide to your favorite episodes of SHOW NAME.
-        Replace these placeholders with real episode titles, numbers, and short reviews
-        once you pick your show.
+        ARC-V is split into several big arcs that jump across dimensions. This page gives
+        you a simple look at some key episodes and why they matter. You can swap in your
+        own favorite episodes and more detailed reviews later.
       </p>
       <ol class="episodes-list-summary">
-        <li>Season 1 – Introduces the core cast and main conflict.</li>
-        <li>Season 2 – Raises the stakes and explores new locations.</li>
-        <li>Season 3 – Wraps up major story arcs and reveals hidden truths.</li>
+        <li>
+          <strong>Standard Dimension / You Show Arc</strong> – Yuya develops his style
+          as an Entertainment Duelist and discovers Pendulum Summoning.
+        </li>
+        <li>
+          <strong>Synchro Dimension (New Domino-style City)</strong> – The cast gets
+          dragged into a conflict built around dueling, rankings, and resistance.
+        </li>
+        <li>
+          <strong>Xyz and Fusion Dimensions</strong> – The truth behind the war, the
+          Four Yuyas, and what the Professor is actually doing.
+        </li>
       </ol>
     </section>
 
     <section class="episodes-grid">
       <article class="episode-card">
-        <img src="https://via.placeholder.com/400x230" alt="Episode 1 still image placeholder">
-        <h3>Episode 1: Pilot Title</h3>
+        <!-- Replace with a screenshot from early episodes -->
+        <img src="https://via.placeholder.com/400x230" alt="Yuya’s first big duel inspired screenshot">
+        <h3>Episode 1: Swing Into Action</h3>
         <p>
-          The story begins as the main character stumbles into a situation that changes
-          everything. Use this space for a short summary and your thoughts.
+          Yuya is thrown into a high-pressure Duel in front of a live audience. His attempt
+          to smile through the pressure sets the tone for his whole “entertainment duel”
+          philosophy.
         </p>
         <ul>
-          <li>Focus character: Main Protagonist</li>
-          <li>Key theme: Destiny vs. choice</li>
-          <li>Rating: ★★★★☆</li>
+          <li>Focus character: Yuya Sakaki</li>
+          <li>Key theme: Performing under pressure</li>
+          <li>Energy: Classic shōnen first duel hype</li>
         </ul>
       </article>
 
       <article class="episode-card">
-        <img src="https://via.placeholder.com/400x230" alt="Episode 2 still image placeholder">
-        <h3>Episode 2: Trouble Starts</h3>
+        <!-- Replace with a You Show School screenshot -->
+        <img src="https://via.placeholder.com/400x230" alt="You Show Duel School inspired screenshot">
+        <h3>Episode 2: You Show, You Duel</h3>
         <p>
-          Early alliances form and the first real conflict appears. You can mention
-          favorite scenes or moments that stood out to you.
+          We see more of You Show Duel School, its weird teaching style, and why Yuya’s
+          friends believe in him even when the school looks like a joke to everyone else.
         </p>
         <ul>
-          <li>Focus character: Sidekick</li>
-          <li>Key theme: Trust</li>
-          <li>Rating: ★★★★☆</li>
+          <li>Focus characters: Yuya, Yuzu, Gongenzaka</li>
+          <li>Key theme: Believing in “small” dreams</li>
+          <li>Rating: ★★★★☆ for character vibes</li>
         </ul>
       </article>
 
       <article class="episode-card">
-        <img src="https://via.placeholder.com/400x230" alt="Episode 3 still image placeholder">
-        <h3>Episode 3: Big Reveal</h3>
+        <!-- Replace with a Pendulum Summon moment screenshot -->
+        <img src="https://via.placeholder.com/400x230" alt="Pendulum Summon inspired screenshot">
+        <h3>Episode 3: The Pendulum Miracle</h3>
         <p>
-          A twist changes how the audience understands the story so far. Use this
-          as a place to talk about why this episode is important.
+          Pendulum Summoning takes the stage and completely changes how duels look.
+          This is the “new mechanic reveal” that the whole series builds around.
         </p>
         <ul>
-          <li>Focus character: Antagonist</li>
-          <li>Key theme: Secrets</li>
-          <li>Rating: ★★★★★</li>
+          <li>Focus character: Yuya Sakaki</li>
+          <li>Key theme: Change and potential</li>
+          <li>Rating: ★★★★★ for spectacle</li>
         </ul>
       </article>
 
       <article class="episode-card">
-        <img src="https://via.placeholder.com/400x230" alt="Episode 4 still image placeholder">
-        <h3>Episode 4: Calm Before the Storm</h3>
+        <!-- Replace with a Synchro Dimension / city shot -->
+        <img src="https://via.placeholder.com/400x230" alt="Synchro Dimension city inspired screenshot">
+        <h3>Key Arc Episode: Synchro Showdown</h3>
         <p>
-          A quieter episode that focuses on character moments and relationships,
-          setting up future events.
+          In the Synchro Dimension, duels are tied to status and control. Yuya clashes
+          with a system where losing a duel means more than just losing LP.
         </p>
         <ul>
-          <li>Focus character: Group</li>
-          <li>Key theme: Found family</li>
-          <li>Rating: ★★★★☆</li>
+          <li>Focus characters: Yuya &amp; local rivals</li>
+          <li>Key theme: Freedom vs. control</li>
+          <li>Rating: ★★★★☆ for worldbuilding</li>
         </ul>
       </article>
 
       <article class="episode-card">
-        <img src="https://via.placeholder.com/400x230" alt="Episode 5 still image placeholder">
-        <h3>Episode 5: Everything Goes Wrong</h3>
+        <!-- Replace with an emotional dragon scene -->
+        <img src="https://via.placeholder.com/400x230" alt="Emotional dragon duel inspired screenshot">
+        <h3>Key Arc Episode: Dragons and Doubt</h3>
         <p>
-          The situation spirals out of control, forcing the cast to make difficult
-          decisions. This can be one of your favorite dramatic episodes.
+          Yuya’s dragons mirror his emotional state, and the show leans into how scary
+          it feels when your power starts to slip out of your control.
         </p>
         <ul>
-          <li>Focus character: Main Protagonist</li>
-          <li>Key theme: Sacrifice</li>
-          <li>Rating: ★★★★★</li>
+          <li>Focus character: Yuya Sakaki</li>
+          <li>Key theme: Fear of your own power</li>
+          <li>Rating: ★★★★★ for emotional damage</li>
         </ul>
       </article>
 
       <article class="episode-card">
-        <img src="https://via.placeholder.com/400x230" alt="Episode 6 still image placeholder">
-        <h3>Episode 6: Season Finale</h3>
+        <!-- Replace with a late-series group shot -->
+        <img src="https://via.placeholder.com/400x230" alt="ARC-V cast climax inspired screenshot">
+        <h3>Late-Series Turning Point</h3>
         <p>
-          The first big arc wraps up and hints at what is coming next.
-          You can summarize how the season feels as a whole.
+          The different dimensions, versions of Yuya, and the larger plan finally come
+          together. Friendships, ideals, and dragons all collide at once.
         </p>
         <ul>
-          <li>Focus character: Everyone</li>
-          <li>Key theme: Consequences</li>
-          <li>Rating: ★★★★☆</li>
+          <li>Focus characters: Core main cast</li>
+          <li>Key theme: Identity and choice</li>
+          <li>Rating: ★★★★☆ for chaos and payoff</li>
         </ul>
       </article>
     </section>
   </main>
 
   <footer class="site-footer">
-    <p>&copy; 2025 SHOW NAME Fan Hub. Episodes page.</p>
+    <p>&copy; 2025 Yu-Gi-Oh! ARC-V Episode Guide. Student review page.</p>
   </footer>
 
 </body>
