--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Show Name Fan Site - Home</title>
+  <title>Yu-Gi-Oh! ARC-V Fan Site - Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway:100,200,600,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="home-page">
 
   <header class="site-header">
-    <h1 class="site-title">SHOW NAME FAN HUB</h1>
+    <h1 class="site-title">YU-GI-OH! ARC-V FAN HUB</h1>
     <nav class="site-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -22,85 +22,93 @@
 
   <main class="content home-grid">
     <section class="hero">
-      <img src="https://via.placeholder.com/900x400" alt="Hero banner image for SHOW NAME">
+      <!-- Replace this with an ARC-V hero image or banner later -->
+      <img src="https://via.placeholder.com/900x400" alt="Hero banner image inspired by Yu-Gi-Oh! ARC-V">
       <div class="hero-text">
-        <h2>Welcome to the World of SHOW NAME</h2>
+        <h2>Step into the World of Yu-Gi-Oh! ARC-V</h2>
         <p>
-          This site is a fan-made hub for <strong>SHOW NAME</strong>,
-          collecting summaries, favorite episodes, character highlights, and more.
-          Replace this text later with details about your chosen TV show, movie, book, or game.
+          <strong>Yu-Gi-Oh! ARC-V</strong> follows Yuya Sakaki, an Entertainment Duelist
+          who wants to make people smile with his duels. Along the way, he learns about
+          Pendulum Summoning, interdimensional conflict, and the truth behind the four
+          separate dimensions linked by Duel Monsters.
         </p>
       </div>
     </section>
 
     <section class="home-intro">
-      <h3>What Is SHOW NAME About?</h3>
+      <h3>What Is ARC-V About?</h3>
       <p>
-        SHOW NAME follows a group of characters as they deal with impossible choices,
-        unexpected twists, and very dramatic lighting. Use this block to give a short
-        overview of the story, tone, and main themes.
+        The story begins in the Standard Dimension, where Yuya studies at You Show Duel
+        School and dreams of becoming a great entertainer like his father. His life changes
+        when a high-stakes Duel gives him the chance to show off a new summoning method:
+        <strong>Pendulum Summoning</strong>.
       </p>
       <p>
-        You can describe the setting, the main conflict, and why the story matters.
-        Keep things spoiler-light here and save deeper analysis for the other pages.
+        As the series goes on, the cast is pulled into a conflict that spans the
+        <strong>Standard, Synchro, Xyz, and Fusion</strong> dimensions. Friends and rivals
+        from each world collide, and duels become a way to fight for freedom, identity,
+        and what “smiles” actually mean.
       </p>
 
       <ul class="tag-list">
-        <li>Genre: <span>Action / Drama</span></li>
-        <li>Target Audience: <span>Teens &amp; Adults</span></li>
-        <li>Vibes: <span>Mystery, Found Family, Plot Twists</span></li>
+        <li>Genre: <span>Shōnen / Action / Fantasy</span></li>
+        <li>Focus: <span>Duel Monsters, Pendulum Summoning, Dimension Travel</span></li>
+        <li>Vibes: <span>Over-the-top duels, found family, emotional dragons</span></li>
       </ul>
     </section>
 
     <aside class="home-sidebar">
-      <h3>Quick Facts</h3>
+      <h3>ARC-V Quick Facts</h3>
       <table class="info-table">
         <tr>
-          <th>Seasons</th>
-          <td>3</td>
+          <th>Main Protagonist</th>
+          <td>Yuya Sakaki</td>
         </tr>
         <tr>
-          <th>Episodes</th>
-          <td>36</td>
+          <th>Number of Episodes</th>
+          <td>148</td>
         </tr>
         <tr>
-          <th>Episode Length</th>
-          <td>24–45 minutes</td>
+          <th>Original Run</th>
+          <td>2014–2017</td>
         </tr>
         <tr>
-          <th>Original Release</th>
-          <td>Year XXXX</td>
+          <th>Signature Mechanic</th>
+          <td>Pendulum Summoning</td>
         </tr>
       </table>
 
-      <img src="https://via.placeholder.com/300x200" alt="Promotional style image for SHOW NAME" class="sidebar-image">
+      <!-- Replace with a Yuya / main cast screenshot later -->
+      <img src="https://via.placeholder.com/300x200" alt="Yu-Gi-Oh! ARC-V main cast style image" class="sidebar-image">
 
       <p class="highlight-box">
-        Fans love SHOW NAME for its character development, memorable dialogue,
-        and the way it balances humor with serious moments.
+        ARC-V mixes classic Yu-Gi-Oh! duel hype with new mechanics and the idea that
+        dueling is a performance meant to bring joy, even when the stakes get absurdly high.
       </p>
     </aside>
 
     <section class="home-extra">
-      <h3>Join the Fandom</h3>
+      <h3>Why Watch ARC-V?</h3>
       <p>
-        Use this section to describe how fans usually engage with SHOW NAME:
-        online communities, fan art, streaming marathons, or conventions.
+        ARC-V is packed with creative duel setups, overdramatic speeches, and big emotional
+        swings involving dragons, friends, and morally questionable adults. If you like
+        card games that behave like full-on boss battles, this series is very much that.
       </p>
 
-      <img src="https://via.placeholder.com/400x250" alt="Fan art style placeholder for SHOW NAME">
+      <!-- Replace with an Action Duel / field screenshot later -->
+      <img src="https://via.placeholder.com/400x250" alt="Action Duel style scene inspired by Yu-Gi-Oh! ARC-V">
 
       <form class="newsletter-form">
-        <h4>Sign Up for Updates</h4>
-        <label for="email">Email address:</label>
+        <h4>Fan Notes &amp; Updates</h4>
+        <label for="email">Email address (for pretend updates):</label>
         <input id="email" type="email" name="email" placeholder="you@example.com">
-        <button type="submit">Join List</button>
+        <button type="submit">Save Info</button>
       </form>
     </section>
   </main>
 
   <footer class="site-footer">
-    <p>&copy; 2025 SHOW NAME Fan Hub. This is a student project site.</p>
+    <p>&copy; 2025 Yu-Gi-Oh! ARC-V Fan Hub. This is a student project site, not an official page.</p>
   </footer>
 
 </body>
