--- a/gallery.html
+++ b/gallery.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Show Name Fan Site - Gallery</title>
+  <title>Yu-Gi-Oh! ARC-V Fan Site - Gallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway:100,200,600,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="gallery-page">
 
   <header class="site-header">
-    <h1 class="site-title">SHOW NAME FAN HUB</h1>
+    <h1 class="site-title">ARC-V VISUAL GALLERY</h1>
     <nav class="site-nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="episodes.html">Episodes</a></li>
+        <li><a href="index.html">Main Site</a></li>
+        <li><a href="episodes.html">Episode List</a></li>
         <li><a href="gallery.html">Gallery</a></li>
       </ul>
     </nav>
@@ -22,88 +22,99 @@
 
   <main class="content gallery-layout">
     <section class="gallery-intro">
-      <h2>Character &amp; Scene Gallery</h2>
+      <h2>Characters &amp; Scenes from Yu-Gi-Oh! ARC-V</h2>
       <p>
-        This page can highlight important characters, locations, or scenes from SHOW NAME.
-        Swap these placeholders for real images and captions that match your chosen work.
+        ARC-V has a really loud visual style: bright colors, wild duel fields,
+        and character designs that look like someone yelled “more accessories”
+        at the design team. This page highlights a few key faces and places.
       </p>
       <p>
-        Try to mix serious analysis with fun commentary. You can mention visual motifs,
-        costume designs, or how a place in the show changes over time.
+        You can swap the placeholder images with real screenshots of Yuya,
+        his friends, the dragons, and any duel that lives rent-free in your brain.
       </p>
     </section>
 
     <section class="gallery-grid">
       <figure class="gallery-item">
-        <img src="https://via.placeholder.com/350x250" alt="Main character placeholder portrait">
+        <!-- Replace with a Yuya screenshot -->
+        <img src="https://via.placeholder.com/350x250" alt="Yuya Sakaki inspired portrait">
         <figcaption>
-          <strong>Main Character</strong><br>
-          The protagonist of SHOW NAME. Write about their personality, goals, and how
-          they change throughout the story.
+          <strong>Yuya Sakaki</strong><br>
+          The main protagonist and Entertainment Duelist. His goal is to make people
+          smile with duels, even while the plot keeps throwing trauma directly at him.
         </figcaption>
       </figure>
 
       <figure class="gallery-item">
-        <img src="https://via.placeholder.com/350x250" alt="Supporting character placeholder portrait">
+        <!-- Replace with a Yuzu / Zuzu screenshot -->
+        <img src="https://via.placeholder.com/350x250" alt="Yuzu/Zuzu style portrait">
         <figcaption>
-          <strong>Key Ally</strong><br>
-          A close friend or partner who supports the main character. You can include
-          what makes them memorable to you.
+          <strong>Yuzu / Zuzu</strong><br>
+          Yuya’s childhood friend with a solid right hook and a strong sense of justice.
+          Constantly dragged into dimensional nonsense but refuses to back down.
         </figcaption>
       </figure>
 
       <figure class="gallery-item">
-        <img src="https://via.placeholder.com/350x250" alt="Antagonist placeholder portrait">
+        <!-- Replace with an “antagonist” screenshot (Reiji, Academia, etc.) -->
+        <img src="https://via.placeholder.com/350x250" alt="ARC-V antagonist inspired portrait">
         <figcaption>
-          <strong>Antagonist</strong><br>
-          The main source of conflict. Are they purely evil, misunderstood, or something
-          in between?
+          <strong>Key Antagonist</strong><br>
+          Whether it’s a certain CEO-level genius or Academia’s forces, the “villains”
+          in ARC-V usually have a plan, a backstory, and a lot of dramatic lighting.
         </figcaption>
       </figure>
 
       <figure class="gallery-item">
-        <img src="https://via.placeholder.com/350x250" alt="Important location placeholder image">
+        <!-- Replace with You Show or city shot -->
+        <img src="https://via.placeholder.com/350x250" alt="You Show Duel School inspired location">
         <figcaption>
-          <strong>Important Location</strong><br>
-          A place where everything changes. Talk about why this location matters to the story.
+          <strong>You Show Duel School</strong><br>
+          A small, chaotic duel school that feels like home. It represents the kind of
+          dueling that values creativity and fun over rigid rules or rankings.
         </figcaption>
       </figure>
 
       <figure class="gallery-item">
-        <img src="https://via.placeholder.com/350x250" alt="Emotional scene placeholder image">
+        <!-- Replace with emotional scene (crying, goodbye, etc.) -->
+        <img src="https://via.placeholder.com/350x250" alt="Emotional ARC-V scene inspired image">
         <figcaption>
           <strong>Emotional Moment</strong><br>
-          A scene that hits hard emotionally. You can keep this spoiler-light if needed.
+          ARC-V doesn’t hesitate to drop dramatic speeches, breakdowns, and heartfelt
+          goodbyes in the middle of card games about hologram dragons.
         </figcaption>
       </figure>
 
       <figure class="gallery-item">
-        <img src="https://via.placeholder.com/350x250" alt="Action scene placeholder image">
+        <!-- Replace with big Action Duel shot -->
+        <img src="https://via.placeholder.com/350x250" alt="Action Duel highlight inspired image">
         <figcaption>
-          <strong>Action Highlight</strong><br>
-          A big fight, chase, or showdown that shows off the tone of the show.
+          <strong>Action Duel Highlight</strong><br>
+          Action Duels let characters grab Action Cards from the field mid-battle,
+          turning duels into parkour plus magic plus screaming. Peak “extra.”
         </figcaption>
       </figure>
     </section>
 
     <section class="gallery-notes">
-      <h3>Visual Themes to Notice</h3>
+      <h3>Visual Details Worth Watching For</h3>
       <ul>
-        <li>Color palettes that match certain emotions or locations.</li>
-        <li>Recurring symbols, props, or background details.</li>
-        <li>How characters’ outfits change as the story progresses.</li>
-        <li>Differences between calm scenes and high-intensity scenes.</li>
+        <li>How different dimensions use color to signal their atmosphere and mood.</li>
+        <li>The way Yuya’s dragons evolve alongside his emotional state.</li>
+        <li>Background gags and posters in You Show Duel School and around the city.</li>
+        <li>Contrast between “fun” Entertainment Duels and the harsher war-like duels.</li>
       </ul>
 
       <p class="gallery-highlight">
-        Use this part of the page for short analysis or random observations that
-        do not fit anywhere else but still feel important.
+        ARC-V’s visuals are a big part of its storytelling. Even if you ignore the card
+        text, you can track character growth and tension just by watching how the scenes
+        are framed and colored.
       </p>
     </section>
   </main>
 
   <footer class="site-footer">
-    <p>&copy; 2025 SHOW NAME Fan Hub. Gallery page.</p>
+    <p>&copy; 2025 Yu-Gi-Oh! ARC-V Visual Gallery. Student fan gallery page.</p>
   </footer>
 
 </body>
